2009-03-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/gp_cairo.c (gp_cairo_draw_text): Determine the vertical
	placement of text based on the average value found when the font was
	selected, rather than on the specific height of this text fragment.
	Otherwise successive fragments with different height produce an uneven
	baseline.  Bug #2661664

2009-03-15  Ethan A Merritt  <merritt@u.washington.edu>

	Increment patchlevel, version strings, documentation dates, and NEWS in
	preparation for release of version 4.2.5

2009-03-13  Ethan A Merritt  <merritt@u.washington.edu>

	* demo/datastrings.dem demo/histograms.dem demo/histograms:
	Switch demos to use the documented syntax "... title columnhead(2)"
	rather than the deprecated "... title 2"

2009-03-05  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c: Fix assignment of fill patterns to plot boxes and key
	for columnstacked histograms.  Bug #2664732

2009-03-04  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (find_maxl_keys do_plot): The first entry in a list of
	labels is a placeholder for style information.  Do not reserve space for
	this entry in the key of a columnstacked histogram plot.  Bug #2664723

2009-03-02  Ethan A Merritt  <merritt@u.washington.edu>

	* term/hpgl.trm term/tgif.trm term/gd.trm:
	Fix illegal memory access violations found by valgrind.

2009-03-02  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/post.trm (PS_encode_image print_five_operand_image): Fix
	related to the patch of post.trm from 2009-01-26: images drawn
	"with rgbimage" must always be drawn as rgb colour images.
	SF Patch #2613919: postscript outputs colour RGB as palette image

2009-02-25  Ethan A Merritt  <merritt@u.washington.edu>

	* term/gd.trm (PNG_text_angle): Force angle to fall in the range
	[-pi/2 : pi/2].  Reported to avoid problems in some versions of libgd.

2009-02-16  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/titlepag.tex docs/gnuplot.doc term/cgm.trm: